# brc20-programmable-module

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  env.sample  env.signet.sample  eth_endpoints.txt  release.toml  rustfmt.toml
.github/workflows/: rust.yml
benches/: btc_precompiles.rs  precompiles.rs
brc20-programmable-module/: Chart.yaml  values.yaml
brc20-programmable-module/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
brc20-programmable-module/templates/tests/: test-connection.yaml
db/: Cargo.toml
db/src/: lib.rs
db/src/cache/: block_cache.rs  cached_db.rs  eitem_ditem.rs  mod.rs
db/src/cached_database/: block_cached_database.rs  block_database.rs  block_history_cache.rs  bytes_wrapper.rs  mod.rs
db/src/test_utils/: db.rs  mod.rs
db/src/types/: account_info_ed.rs  address_ed.rs  b256_ed.rs  block_ed.rs  bytecode_ed.rs  cache.rs  encode_decode.rs  log_ed.rs  mod.rs  tx_ed.rs  tx_receipt_ed.rs  u256_u512_ed.rs  uint_ed.rs
examples/brc20_prog_helper/: BRC20_Prog.abi  BRC20_Prog.sol  IBRC20_Prog.sol  Makefile  index.js  package-lock.json  package.json
examples/erc20_contract/: BobCoin.sol  index.js  package-lock.json  package.json
examples/simple_contract/: Simple.sol  index.js  package-lock.json  package.json
integration_test/: compile_contract_into_json.js  package-lock.json  package.json  performance_test_opcode_generator.py  performance_test_single_block_btc_tx_details.py  performance_test_single_block_precompile.py  readme.txt  requirements.txt  run_custom.js  sim_brc20_custom_call2.py  sim_brc20_custom_localdb_bypass_serv.py  sim_brc20_custom_locdb_call2.py  simulate_brc20_events.py  simulate_brc20_events_custom.py  simulate_brc20_events_custom_from_event_provider.py  test_bip322_precompile.py  test_brc20_precompile.py  test_btc_precompile.py  test_generator.py  test_precompiles.py
integration_test/brc20_prog/: brc20_prog_client.py
integration_test/contracts/: BRC20_Controller.json  BRC20_Controller.sol  BRC20_Prog.sol  IBRC20_Controller.sol  IBRC20_Prog.sol
integration_test/contracts/brc20_deployer/: BRC20_Deployer.sol
integration_test/contracts/brc20_prog_helper/: BRC20_Prog.abi  BRC20_Prog.bytecode  BRC20_Prog.json  BRC20_Prog_bip322_verify_tx.json  BRC20_Prog_brc20_balance_tx.json  BRC20_Prog_btc_last_sat_loc_tx.json  BRC20_Prog_btc_locked_pkscript_tx.json  BRC20_Prog_btc_tx_details_tx.json  BRC20_Prog_deploy_tx.json  BRC20_Prog_get_random_number_tx.json  BRC20_Prog_get_sha_256_tx.json
server/: Cargo.toml
server/contracts/: BRC20_Controller.abi  BRC20_Prog.abi
server/contracts/src/: Makefile
server/contracts/src/interfaces/: draft-IBRC6093.sol
server/src/: api.rs  evm.rs  http_server.rs  lib.rs  rpc_server.rs  server_instance.rs  types.rs
server/src/contracts/: BRC20_Controller.json  brc20_controller.rs  mod.rs
server/src/evm/: bip322_precompile.rs  brc20_precompile.rs  btc_precompile.rs  evm.rs  mod.rs  precompiles.rs  utils.rs
server/src/evm/precompiles/: bip322_verify_precompile.rs  btc_last_sat_loc_precompile.rs  btc_precompile.rs  btc_tx_details_precompile.rs  btc_utils.rs  get_locked_pkscript_precompile.rs  last_sat_loc_precompile.rs  mod.rs  precompiles.rs
src/: in_memory_main.rs  lib.rs  main.rs
src/api/: api.rs  mod.rs  types.rs
src/brc20_controller/: brc20_controller.rs  mod.rs
src/brc20_controller/contract/: BRC20_Controller.abi  BRC20_Controller.json  BRC20_Controller_deploy.bytecode
src/brc20_controller/contract/output/: BRC20_Controller_deploy.bytecode
src/brc20_controller/contract/src/: BRC20_Controller.sol  IBRC20_Controller.sol  index.js  package-lock.json  package.json
src/brc20_controller/contract/src/interfaces/: draft-IBRC6093.sol
src/config/: config.rs  database.rs  mod.rs
src/db/: brc20_prog_database.rs  db.rs  mod.rs
src/db/cached_database/: block_cached_database.rs  block_database.rs  block_history_cache.rs  mod.rs
src/db/database/: block_database.rs  mod.rs
src/db/types/: account_info_ed.rs  address_ed.rs  b256_ed.rs  block_ed.rs  bytecode_ed.rs  bytes_ed.rs  encode_decode.rs  log_ed.rs  mod.rs  raw_block_ed.rs  trace_ed.rs  tx_ed.rs  tx_receipt_ed.rs  uint_ed.rs
src/engine/: engine.rs  evm.rs  hardforks.rs  mod.rs  utils.rs
src/engine/precompiles/: bip322_verify_precompile.rs  brc20_balance_precompile.rs  btc_last_sat_loc_precompile.rs  btc_op_return_tx_id_precompile.rs  btc_tx_details_precompile.rs  btc_utils.rs  get_locked_pkscript_precompile.rs  mod.rs  precompiles.rs
src/evm/: api.rs  evm.rs  handler.rs  mod.rs  utils.rs
src/evm/precompiles/: bip322_verify_precompile.rs  brc20_balance_precompile.rs  btc_last_sat_loc_precompile.rs  btc_tx_details_precompile.rs  btc_utils.rs  get_locked_pkscript_precompile.rs  mod.rs  precompiles.rs
src/global/: config.rs  database.rs  mod.rs  shared_data.rs
src/server/: api.rs  auth.rs  engine.rs  error.rs  mod.rs  rpc_server.rs  server_instance.rs  shared_data.rs  start.rs  types.rs
src/shared_data/: mod.rs
test_generator/: test_generator.py
test_utils/: Cargo.toml
test_utils/data/: bip322_verify_call_tx_data  brc20_prog_helper_call_response  brc20_prog_helper_call_tx_data  btc_get_locked_pkscript_call_response  btc_get_tx_details_mainnet_call_2_response  btc_get_tx_details_mainnet_call_2_tx_data  btc_get_tx_details_mainnet_call_3_response  btc_get_tx_details_mainnet_call_3_tx_data  btc_get_tx_details_mainnet_call_response  btc_get_tx_details_mainnet_call_tx_data  btc_get_tx_details_signet_call_tx_data  btc_last_sat_loc_call_tx_data  get_brc20_balance_call_response  get_brc20_balance_call_tx_data
test_utils/src/: utils.rs
tests/: brc20_token.rs  btc_rpc_local.rs  deploy_call.rs  eth_get_logs.rs  eth_reads.rs  precompiles.rs  public_api.rs  server_client.rs  transact.rs
tests/common/: utils.rs
tests/data/: brc20_prog_helper_deploy_tx_data  btc_get_locked_pkscript_call_tx_data  btc_get_tx_details_call_response  btc_last_sat_loc_call_response
tests/snapshots/: public_api__public_api.snap
