[package]
name = "brc20-prog"
version = "0.11.4"
edition = "2021"
license = "Apache-2.0"
description = "BRC20 programmable module - Smart contract execution engine compatible with BRC20 standard"
homepage = "https://signet.bestinslot.xyz/brc2.0/interact"
repository = "https://github.com/bestinslot-xyz/brc20-programmable-module"
rust-version = "1.87.0"

[dependencies]
alloy = { version = "0.15.11", features = [
    "consensus",
    "eips",
    "network",
    "rlp",
    "rpc",
    "signers",
    "sol-types",
] }
alloy-rlp = "0.3.12"
alloy-rpc-types-trace = "0.15.11"
alloy-sol-types = "1.0.9"
base64 = "0.22.1"
bip322 = { version = "0.0.10", optional = true }
bitcoin = { version = "0.32.5", optional = true }
bitcoincore-rpc = { version = "0.19.0", optional = true }
dotenvy = "0.15.0"
either = { version = "1.15.0" }
hex = "0.4.3"
hyper = { version = "1.6.0", optional = true }
jsonrpsee = { version = "0.25.1", features = ["server", "client", "macros"] }
lazy_static = "1.5.0"
nada = "0.2.2"
revm = { version = "22.0.1", default-features = false, optional = true }
revm-inspectors = { version = "0.20.1", optional = true }
revm-state = "3.0.0"
rlimit = { version = "0.10.2", optional = true }
rocksdb = { version = "0.24.0", optional = true }
rs_merkle = { version = "1.4.2", optional = true }
rust-embed = { version = "8.7.1", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.138"
tokio = { version = "1.44.2", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "auth",
], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
ureq = { version = "3.0.11", optional = true }
zstd-safe = "7.2.4"

[dev-dependencies]
alloy-consensus = "1.0.9"
alloy-network = "1.0.9"
alloy-rpc-types-eth = "1.0.9"
alloy-signer = "1.0.9"
alloy-signer-local = "1.0.9"
criterion = "0.5.1"
insta = "1.43.1"
public-api = "0.47.0"
rand = "0.9.1"
rustdoc-json = "0.9.5"
rustup-toolchain = "0.1.10"
tempfile = "3.20.0"
test-utils = { path = "test_utils" }

[[bench]]
name = "precompiles"
harness = false

[[bench]]
name = "btc_precompiles"
harness = false

[features]
default = ["server"]
server = [
    "bip322",
    "bitcoin",
    "bitcoincore-rpc",
    "hyper",
    "revm",
    "revm-inspectors",
    "rlimit",
    "rocksdb",
    "rs_merkle",
    "rust-embed",
    "tower",
    "tower-http",
    "tokio",
    "tracing-subscriber",
    "ureq",
]

[[bin]]
name = "brc20-prog"
path = "src/bin/main.rs"
required-features = ["server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
panic = 'abort'
