[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
revm = "19.4.0"
rouille = "3.6.2"
serde = "1.0.196"
serde_json = "1.0.113"
db = { path = "../db" }
jsonrpsee = { version = "0.24.8", features = [ "server", "macros", "jsonrpsee-core", "jsonrpsee-types" ] }
# evm-coder = "0.4.2"
# solabi = "0.2.0"
