[package]
name = "test-utils"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Test utils for brc20-prog"

[dependencies]
brc20-prog = { path = "../", features = ["server"] }
jsonrpsee = { version = "0.26.0", features = ["server", "client"] }
rust-embed = "8.9.0"
tempfile = "3.23.0"
tokio = "1.48.0"